# avery-label-generator

./: MANIFEST.in  README.md  app.py  avery_labels.py  avery_specs.csv  pyproject.toml  requirements.txt  run.sh  test_addresses.csv
app/: __init__.py
app/static/: style.css
avery_labels/: __init__.py
docs/superpowers/plans/: 2026-04-24-uv-tool-install-plan.md
docs/superpowers/specs/: 2026-04-24-uv-tool-install-design.md  2026-04-24-web-ui-design.md
templates/: index.html
