[project]
name = "avery-labels"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0.0",
    "openpyxl>=3.0.0",
    "reportlab>=4.0.0",
]

[project.scripts]
avery-labels = "app:main"

[tool.setuptools]
packages = ["avery_labels", "app"]
include-package-data = true

[tool.setuptools.package-data]
avery_labels = ["*.csv"]